Issue #DTW-35: Added large spacing variable and margin top to grid items on small devices

--- a/source/_layouts/grid.scss
+++ b/source/_layouts/grid.scss
@@ -5,6 +5,7 @@
  */
 
 $grid-spacing: 20px;
+$grid-spacing-large: 40px;
 
 /* Styles
    ========================================================================== */
@@ -47,6 +48,7 @@ $grid-spacing: 20px;
     flex-basis: 100%;
     flex-grow: 0;
     flex-shrink: 0;
+    margin-top: $grid-spacing-large;
 
     @include breakpoint($breakpoint-desk) {
       // It seems there are some rounding issues (at least in Chrome) that is why we multiply with 2.035.
